# Badger2040Examples

./: .gitmodules  README.md
Clock/: CMakeLists.txt
Clock/src/: CMakeLists.txt  main.cpp
LinesDraw/src/: main.cpp
Sleep/src/: DrJonEA.h  main.cpp
SlideShow/src/: CMakeLists.txt  main.cpp  slides.h
TextDraw/: CMakeLists.txt
TextDraw/src/: CMakeLists.txt  DrJonEA.h  badgerw_import.cmake  main.cpp
